--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,8 +11,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="104dp"
+        android:layout_marginBottom="22dp"
         android:text="Catch the Bear"
         android:textSize="34sp"
+        app:layout_constraintBottom_toTopOf="@+id/buttonPlay"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -21,50 +23,34 @@
         android:id="@+id/buttonPlay"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="6dp"
-        android:layout_marginBottom="13dp"
+        android:layout_marginEnd="6dp"
+        android:layout_marginBottom="11dp"
         android:onClick="changeStart"
         android:text="PLAY"
         app:layout_constraintBottom_toTopOf="@+id/buttonScore"
-        app:layout_constraintStart_toStartOf="@+id/buttonScore" />
+        app:layout_constraintEnd_toEndOf="@+id/buttonScore"
+        app:layout_constraintTop_toBottomOf="@+id/textViewSaved" />
 
     <Button
         android:id="@+id/buttonScore"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="320dp"
+        android:layout_marginBottom="7dp"
         android:onClick="changeScores"
         android:text="SCORES"
+        app:layout_constraintBottom_toTopOf="@+id/buttonExit"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/buttonPlay" />
 
     <Button
         android:id="@+id/buttonExit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="6dp"
-        android:layout_marginTop="17dp"
+        android:layout_marginEnd="6dp"
         android:onClick="exit"
         android:text="EXIT"
-        app:layout_constraintStart_toStartOf="@+id/buttonScore"
+        app:layout_constraintEnd_toEndOf="@+id/buttonScore"
         app:layout_constraintTop_toBottomOf="@+id/buttonScore" />
 
-    <EditText
-        android:id="@+id/editYourName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="text"
-        android:text="Name"
-        tools:layout_editor_absoluteX="96dp"
-        tools:layout_editor_absoluteY="566dp" />
-
-    <Button
-        android:id="@+id/saveButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Save"
-        tools:layout_editor_absoluteX="158dp"
-        tools:layout_editor_absoluteY="621dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
